syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";
import "default.proto";

enum ContractVersion {
    CONTRACT_VERSION_WASM = 0;
}

enum ContractType {
    CONTRACT_TYPE_SIGNATURE = 0;
    CONTRACT_TYPE_BOOLEAN = 1;
    CONTRACT_TYPE_INTEGER = 2;
    CONTRACT_TYPE_HASH160 = 3;
    CONTRACT_TYPE_HASH256 = 4;
    CONTRACT_TYPE_BYTE_ARRAY = 5;
    CONTRACT_TYPE_PUBLIC_KEY = 6;
    CONTRACT_TYPE_STRING = 7;
    CONTRACT_TYPE_ARRAY = 8;
    CONTRACT_TYPE_INTEROP_INTERFACE = 9;
    CONTRACT_TYPE_VOID = 10;
}

enum ContractModifier {
    CONTRACT_MODIFIER_PAYABLE = 0;
}

message ContractABI {
    string method = 1;
    bytes hash = 2;
    repeated ContractType input = 3;
    ContractType output = 4;
    repeated ContractModifier modifiers = 5;
}

message Contract {
    UInt160 hash = 1;
    repeated ContractABI abi = 2;
    bytes wasm = 3;
    ContractVersion version = 4;
}

message ContractGlobal {
    uint32 total_contracts = 1;
}

message Invocation {
    UInt160 contract_hash = 1;
    string method_name = 2;
    repeated bytes params = 3;
}